# v4l2ucp

./: README.md
.github/workflows/: main.yml  ubuntu_20_04.yml
rqt_v4l2ucp/: CMakeLists.txt
rqt_v4l2ucp/src/rqt_v4l2ucp/: v4l2ucp.py
v4l2ucp/: CMakeLists.txt  README  package.xml
v4l2ucp/config/: params.yaml
v4l2ucp/include/v4l2ucp/: mainWindow.h  v4l2controls.h  v4l2ucp.h
v4l2ucp/launch/: v4l2ucp.launch  v4l2ucp_launch.py
v4l2ucp/msg/: Control.msg
v4l2ucp/scripts/: set_param.py
v4l2ucp/src/: main.cpp  mainWindow.cpp  v4l2controls.cpp  v4l2ctrl.c  v4l2ucp.cpp
v4l2ucp/srv/: SetControl.srv
