<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>v4l2ucp</name>
  <version>0.0.1</version>
  <description>The v4l2ucp package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="wsacul@gmail.com">Lucas Walter</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- if custom message 
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>
  -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
